@@ -4,8 +4,8 @@
 ]>
 <book id="pygtk-reference" xmlns:xi="http://www.w3.org/2001/XInclude">
   <bookinfo>
-    <pubdate>July 1, 2004</pubdate>
-    <title>PyGTK 2.0 Reference Manual v2.4.8</title>
+    <pubdate>July 3, 2004</pubdate>
+    <title>PyGTK 2.0 Reference Manual v2.4.9</title>
     <authorgroup>
       <author>
 	<firstname>John</firstname>
