@@ -1,3 +1,9 @@
+2004-07-03  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gobject-functions.xml (io_add_watch)
+
+	* pygtk2-ref.html Bump version number.
+
 	================ 2.4.8 ==============
 2004-07-01  John Finlay  <finlay@moeraki.com>
 
